cmake_minimum_required(VERSION 3.0)
project(ZSerial)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_DEBUG_POSTFIX d)
if(CMAKE_HOST_WIN32)
add_library(${PROJECT_NAME} ZSerialWindowsImpl.cpp)
#  add_executable(${PROJECT_NAME} test.cpp ZSerialWindowsImpl.cpp)
elseif(CMAKE_HOST_UNIX)
add_library(${PROJECT_NAME} ZSerialUnixImpl.cpp)
# add_executable(${PROJECT_NAME} test.cpp ZSerialUnixImpl.cpp)
if(CMAKE_HOST_APPLE)
    find_library(IOKIT_LIBRARY IOKit )
    find_library(COREFOUNDATION_LIBRARY CoreFoundation )
    target_link_libraries(${PROJECT_NAME} ${IOKIT_LIBRARY} ${COREFOUNDATION_LIBRARY})
endif(CMAKE_HOST_APPLE)
endif(CMAKE_HOST_WIN32)
